2011-08-20  Uros Bizjak  <ubizjak@gmail.com>
	    Michael Matz  <matz@suse.de>

	* config/i386/i386.c (ix86_expand_round_sse4): Expand as
	trunc (a + copysign (nextafter (0.5, 0.0), a)).

2011-08-20  Anatoly Sokolov  <aesok@post.ru>

	* doc/tm.texi.in (PREFERRED_OUTPUT_RELOAD_CLASS): Remove.
	* doc/tm.texi: Regenerate.
	* targhooks.c (default_preferred_output_reload_class): Don't use
	PREFERRED_OUTPUT_RELOAD_CLASS macro.
	* system.h (PREFERRED_OUTPUT_RELOAD_CLASS): Poison.

2011-08-20  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48739
	* tree-ssa.c: Include cfgloop.h.
	(execute_update_addresses_taken): When updating ssa, if in loop closed
	SSA form, call rewrite_into_loop_closed_ssa instead of update_ssa.
	* Makefile.in (tree-ssa.o): Depend on $(CFGLOOP_H).

2011-08-19  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/49936
	* ira.c (ira_init_register_move_cost): Ignore too small subclasses
	for calculation of max register move costs.

2011-08-19  Joseph Myers  <joseph@codesourcery.com>

	* c-parser.c (c_parser_postfix_expression): Convert operands of
	__builtin_complex to their semantic types.

2011-08-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/49721
	* explow.c (convert_memory_address_addr_space): Also permute the
	conversion and addition of constant for zero-extend.

2011-08-19  Joseph Myers  <joseph@codesourcery.com>

	* c-parser.c (c_parser_postfix_expression): Handle RID_BUILTIN_COMPLEX.
	* doc/extend.texi (__builtin_complex): Document.

2011-08-19  Andrew Stubbs  <ams@codesourcery.com>

	* tree-ssa-math-opts.c (is_widening_mult_rhs_p): Handle constants
	beyond conversions.
	(convert_mult_to_widen): Convert constant inputs to the right type.
	(convert_plusminus_to_widen): Don't automatically reject inputs that
	are not an SSA_NAME.
	Convert constant inputs to the right type.

2011-08-19  Andrew Stubbs  <ams@codesourcery.com>

	* tree-ssa-math-opts.c (convert_plusminus_to_widen): Convert add_rhs
	to the correct type.
